Added shapes